tests/compiletests/ui/image/query/query_size_lod_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0, 4>: HasQuerySizeLod` is not satisfied
  --> $DIR/query_size_lod_err.rs:12:21
   |
LL |     *output = image.query_size_lod(0);
   |                     ^^^^^^^^^^^^^^ the trait `HasQuerySizeLod` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0, 4>`
   |
help: the following other types implement trait `HasQuerySizeLod`
  --> crates/spirv-std/src/image.rs:2089:0
  ::: crates/spirv-std/src/image.rs:2106:5
   |
   = note: `Image<SampledType, 0, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:2126:5
   |
   = note: `Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:2146:5
   |
   = note: `Image<SampledType, 2, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:2166:5
   |
   = note: `Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT, COMPONENTS>`
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, spirv_std::::image::{impl#7}::{constant#0}, SAMPLED, FORMAT, COMPONENTS>::query_size_lod`
  --> crates/spirv-std/src/image.rs:1076:4
   = note: this error originates in the attribute macro `crate::macros::gpu_only` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
